--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "cors": "^2.8.5",
     "pg": "^8.8.0",
     "sequelize": "^6.25.3",
     "stream": "^0.0.2"
