--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.19.6",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
