--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
+    "react-sound": "^1.2.0",
     "sequelize": "^6.25.3",
     "stream": "^0.0.2"
   },
