--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "webpack": "^5.74.0",
